# tp-3-agatalukasz-1

./: .gitignore  CMakeLists.txt
src/: main.cpp  module.cpp  signal.cpp  signal.h
